--- a/src/components/BetCalculatorApp.astro
+++ b/src/components/BetCalculatorApp.astro
@@ -19,7 +19,7 @@ const { className = '' } = Astro.props;
       競馬点数計算機
     </h1>
     <p class="text-gray-600 text-lg" role="doc-subtitle">
-      馬券種別と頭数を選択して、自動でBOX買いの点数と合計金額を計算します
+      馬券種別と頭数を選択して、自動で点数と合計金額を計算します
     </p>
   </header>
 
